edit footer, and padding margin

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
 <!-- WELCOME TO FASILKOM UI -->
 <div id="schedule" class="bg-navy">
-  <div class="grid-x align-center align-middle m-h">
-    <div class="cell small-10 medium-8 pad-up pad-down">
+  <div class="grid-x align-center align-middle m-h pad-up pad-down">
+    <div class="cell small-10 medium-8">
       <div class="grid-x align-center align-middle">
         <div class="cell shrink text-center">
           <h1 class="font-moon-2-bold font-light-brown">OPEN HOUSE <br> FASILKOM UI 2018</h1>
@@ -118,7 +118,7 @@
         </div>
       </div>
     </div>
-    <div class="cell small-10 large-5 pad-down">
+    <div class="cell small-10 large-5">
       <div class="grid-x align-left align-middle">
          <div class="cell shrink">
               <img class="icon" src="img/icon/calendar.svg" alt="">
@@ -146,8 +146,8 @@
          </div>
       </div>
     </div>
-    <hr>
-    <div class="cell small-10 large-5 pad-down">
+    <div class="cell small-10 large-5">
+      <hr class="show-only-small">
       <div class="grid-x align-left align-middle">
         <p class="font-white font-kayak-reg">Open House Fasilkom 2017 is an annual
           event with a purpose to give publication for the Faculty of Computer
@@ -191,10 +191,10 @@
             </li>
           </ul>
         </div>
-        <nav class="orbit-bullets">
-          <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
-          <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-          <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+        <nav class="orbit-bullets" >
+          <button class="is-active" style="width:10px; height:10px" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+          <button data-slide="1" style="width:10px; height:10px"><span class="show-for-sr">Second slide details.</span></button>
+          <button data-slide="2" style="width:10px; height:10px"><span class="show-for-sr">Third slide details.</span></button>
         </nav>
       </div>
     </div>
@@ -204,23 +204,23 @@
 
 <!-- LAUNCH -->
 <div id="launch-soon" class="launch-soon">
-  <div class="grid-x h-h align-right align-middle mar-right-very-lit">
+  <div class="grid-x h-h align-right align-middle mar-right">
     <div class="cell shrink">
       <h1 class="font-black font-moon-2-bold">LAUNCHING SOON!</h1>
       <div class="grid-x align-center align-middle">
         <div class="cell bg-violet text-center shrink pad-very-lit" >
-          <div class="grid-y align-center full-h">
+          <div class="grid-y align-center full-h" style="padding:10px 20px;">
 						<h2 class="font-light-brown font-kayak-reg count-font" id="kiri">
           </div>
         </div>
         <div class="cell bg-brown text-center shrink pad-very-lit">
-          <div class="grid-y align-center full-h">
+          <div class="grid-y align-center full-h" style="padding:10px 20px;">
 						<h2 class="font-violet font-kayak-reg count-font" id="kanan">
           </div>
         </div>
         <div class="cell text-center shrink mar-left-very-lit">
           <div class="grid-y align-center full-h">
-            <h2 class="font-kayak-reg mid-lit-font">Day(s) Left!</h2>
+            <h2 class="font-kayak-reg mid-lit-font" style="padding:0 10px">Day(s) Left!</h2>
           </div>
         </div>
       </div>
@@ -278,13 +278,13 @@
 
 <!-- FOOTER -->
 <div id="footer" class="footer bg-navy">
-  <div class="grid-x align-center align-middle f-h">
-    <div class="cell small-6">
-      <div class="grid-y align-center">
-        <p class="font-kayak-reg font-white  footer-font">© Copyright, OH Fasilkom UI 2018</p>
-      </div>
+  <div class="grid-x align-center align-middle align-spaced f-h">
+    <div class="cell small-12 medium-6 footer-left text-center">
+      <!-- <div class="grid-y align-center"> -->
+        <p class="font-kayak-reg font-white footer-font">© Copyright, OH Fasilkom UI 2018</p>
+      <!-- </div> -->
     </div>
-    <div class="cell small-6 text-right">
+    <div class="cell small-12 medium-6 footer-right text-center text-right">
       <img class="sosmed-ico" src="img/icon/line.svg" alt="">
       <img class="sosmed-ico" src="img/icon/instagram.svg" alt="">
       <img class="sosmed-ico" src="img/icon/twitter.svg" alt="">
@@ -303,6 +303,7 @@
 	<script src="js/count.js"></script>
 	<script src="js/navbar.js"></script>
 	<script src="js/vertical-navbar.js"></script>
+	<script src="js/footer.js"></script>
 
 </body>
 </html>
