--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- FUN-FACT -->
 <div id="fun-fact">
   <div class="grid-x align-right align-middle f-h">
-    <div class="cell small-5 pad-right-lit">
+    <div class="cell small-5 mar-right-lit">
       <h1 class="font-violet font-moon-2-bold">FUN FACT!</h1>
       <div class="orbit" role="region" aria-label="They Said" data-orbit data-options="">
         <div class="orbit-wrapper">
@@ -176,17 +176,39 @@
           <ul class="orbit-container">
             <li class="is-active orbit-slide">
               <figure class="orbit-figure text-center font-white font-kayak-reg">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatibus temporibus aperiam est tempora ad doloremque inventore aspernatur illo, eligendi, quisquam itaque exercitationem, voluptatum debitis consequatur dignissimos recusandae hic odit.
+                Saat kelas 12, setelah mengikuti event Open House Fasilkom UI
+                saya semakin mantap bahwa Fasilkom UI adalah pilihan terbaik
+                saya. Selain itu, saya juga mendapat ilmu tentang teknologi dan
+                programming serta lebih mengenal Fasilkom UI lebih dekat.
+                Kakak-kakak panitia juga menyambut dan melayani kami dengan
+                ramah dan baik. Menurut saya, event ini sangat berkesan karena
+                dapat memotivasi saya belajar dengan giat agar cita-cita saya tercapai.
+                <br>
+                <b> — Athiya fatihah </b>
               </figure>
             </li>
             <li class="orbit-slide">
               <figure class="orbit-figure text-center font-white font-kayak-reg">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatibus temporibus aperiam est tempora ad doloremque inventore aspernatur illo, eligendi, quisquam itaque exercitationem, voluptatum debitis consequatur dignissimos recusandae hic odit.
+                Naik kelas 12 tentu menjadi awal yang sulit untuk menentukan
+                pilihan setelah SMA. MauTeknik atau CS? Itu pertanyaan yang saya
+                hadapi selama kelas 12. Dengan adanya Open House Fasilkom 2017
+                lalu membuat saya sadar bahwa Indonesia masih butuh banget orang
+                yang melek teknologi. Dan dari OH itu juga saya menetapkan
+                pilihan saya di Fasilkom!
+                <br>
+                <b> —Meldi hafizh </b>
               </figure>
             </li>
             <li class="orbit-slide">
               <figure class="orbit-figure text-center font-white font-kayak-reg">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatibus temporibus aperiam est tempora ad doloremque inventore aspernatur illo, eligendi, quisquam itaque exercitationem, voluptatum debitis consequatur dignissimos recusandae hic odit.
+                Dengan mengikuti OH Fasilkom UI, kita bisa kenal duluan nih sama
+                semua yang ada di Fasilkom UI, mulai dari penjelasan jurusan
+                sampai keliling gedung fasilkom UI. Kita juga berkesempatan
+                untuk bertemu dosen serta alumni yang hebat-hebat yang pastinya
+                membuat kita semakin termotivasi dan semangat untuk mengejar
+                mimpi berkuliah di Fasilkom UI.
+                <br>
+                <b> -Ilma </b>
               </figure>
             </li>
           </ul>
@@ -229,11 +251,11 @@
 </div>
 <!-- END OF LAUNCH -->
 
-<!-- SNEAK PEAK -->
+<!-- SNEAK PEEK -->
 <div id="sneak-peak">
   <div class="grid-x align-center align-middle f-h">
     <div class="cell small-12 medium-8 text-center">
-      <h1 class="font-moon-2-bold font-white">SNEAK PEAK</h1>
+      <h1 class="font-moon-2-bold font-white">SNEAK PEEK</h1>
       <img id="gsneak" src="../img/orang-sneak.png" alt="">
     </div>
   </div>
