--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             </li>
             <li class="orbit-slide">
               <figure class="orbit-figure font-black font-kayak-reg">
-                Hotspot di Fasilkom tuh cepet banget loh ( jelasin berapa ituannya )
+                Hotspot di Fasilkom UI ada hotspot tercepat yang ada di UI, lho! Kecepatan maksimalnya bisa mencapai 100mbps! Selain itu jaringannya juga tersebar rata di seluruh penjuru gedung Fasilkom. Jadi gaperlu takut kalo ga ada kuota
               </figure>
             </li>
             <li class="orbit-slide">
               <figure class="orbit-figure font-black font-kayak-reg">
-                Kantin di Fasilkom juga murah-murah banget! Banyak dari mahasiswa fakultas lain datang ke Fasilkom hanya sekedar makan fasilkom karena makanannya terkenal enak dan murah!
+                Kantin di Fasilkom juga murah-murah banget! Banyak dari mahasiswa fakultas lain datang ke Fasilkom hanya sekedar makan di fasilkom karena makanannya terkenal enak dan murah!
               </figure>
             </li>
           </ul>
