--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/style.css">
 	  <link rel="stylesheet" href="css/basic.css">
-    <link rel="stylesheet" href="css/app.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
 <body>
@@ -315,17 +316,16 @@
   </div>
 </div>
 <!-- END OF FOOTER -->
-
   <script src="js/vendor/jquery.js"></script>
-  <script src="js/google.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRVAbV_8SbPceex6C14Hs8Mx6FfwOUT4I&callback=myMap"></script>
-  <script src="js/vendor/what-input.js"></script>
   <script src="js/vendor/foundation.js"></script>
+  <script src="js/vendor/what-input.js"></script>
+  <script src="js/google.js"></script>
   <script src="js/app.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRVAbV_8SbPceex6C14Hs8Mx6FfwOUT4I&callback=myMap"></script>
 	<script src="js/count.js"></script>
 	<script src="js/navbar.js"></script>
-	<script src="js/vertical-navbar.js"></script>
 	<script src="js/footer.js"></script>
+	<script src="js/vertical-navbar.js"></script>
 
 </body>
 </html>
